libqt6c/src/libqaccessiblewidget.hpp

typedef QAccessible::State QAccessible__State;
typedef struct QAccessibleInterface QAccessibleInterface;
typedef struct QAccessibleWidget QAccessibleWidget;
typedef struct QAccessible__State QAccessible__State;
typedef struct QColor QColor;
typedef struct QObject QObject;
typedef struct QRect QRect;
typedef struct QWidget QWidget;
typedef struct QWindow QWindow;
QWindow* QAccessibleWidget_Window(const QAccessibleWidget* self);
int QAccessibleWidget_ChildCount(const QAccessibleWidget* self);
int QAccessibleWidget_IndexOfChild(const QAccessibleWidget* self, const QAccessibleInterface* child);
libqt_list /* of pair_qaccessibleinterface_int32_t tuple of QAccessibleInterface* and int */ QAccessibleWidget_Relations(const QAccessibleWidget* self, int match);
QAccessibleInterface* QAccessibleWidget_FocusChild(const QAccessibleWidget* self);
QRect* QAccessibleWidget_Rect(const QAccessibleWidget* self);
QAccessibleInterface* QAccessibleWidget_Parent(const QAccessibleWidget* self);
QAccessibleInterface* QAccessibleWidget_Child(const QAccessibleWidget* self, int index);
libqt_string QAccessibleWidget_Text(const QAccessibleWidget* self, int t);
int QAccessibleWidget_Role(const QAccessibleWidget* self);
QAccessible__State* QAccessibleWidget_State(const QAccessibleWidget* self);
QColor* QAccessibleWidget_ForegroundColor(const QAccessibleWidget* self);
QColor* QAccessibleWidget_BackgroundColor(const QAccessibleWidget* self);
QStringList QAccessibleWidget_ActionNames(const QAccessibleWidget* self);
void QAccessibleWidget_DoAction(QAccessibleWidget* self, const libqt_string actionName);
QStringList QAccessibleWidget_KeyBindingsForAction(const QAccessibleWidget* self, const libqt_string actionName);
bool QAccessibleWidget_SuperIsValid(const QAccessibleWidget* self);
void QAccessibleWidget_OnWindow(const QAccessibleWidget* self, intptr_t slot);
QWindow* QAccessibleWidget_SuperWindow(const QAccessibleWidget* self);
void QAccessibleWidget_OnChildCount(const QAccessibleWidget* self, intptr_t slot);
int QAccessibleWidget_SuperChildCount(const QAccessibleWidget* self);
void QAccessibleWidget_OnIndexOfChild(const QAccessibleWidget* self, intptr_t slot);
int QAccessibleWidget_SuperIndexOfChild(const QAccessibleWidget* self, const QAccessibleInterface* child);
void QAccessibleWidget_OnRelations(const QAccessibleWidget* self, intptr_t slot);
libqt_list /* of pair_qaccessibleinterface_int32_t tuple of QAccessibleInterface* and int */ QAccessibleWidget_SuperRelations(const QAccessibleWidget* self, int match);
void QAccessibleWidget_OnFocusChild(const QAccessibleWidget* self, intptr_t slot);
QAccessibleInterface* QAccessibleWidget_SuperFocusChild(const QAccessibleWidget* self);
void QAccessibleWidget_OnRect(const QAccessibleWidget* self, intptr_t slot);
QRect* QAccessibleWidget_SuperRect(const QAccessibleWidget* self);
void QAccessibleWidget_OnParent(const QAccessibleWidget* self, intptr_t slot);
QAccessibleInterface* QAccessibleWidget_SuperParent(const QAccessibleWidget* self);
void QAccessibleWidget_OnChild(const QAccessibleWidget* self, intptr_t slot);
QAccessibleInterface* QAccessibleWidget_SuperChild(const QAccessibleWidget* self, int index);
void QAccessibleWidget_OnText(const QAccessibleWidget* self, intptr_t slot);
libqt_string QAccessibleWidget_SuperText(const QAccessibleWidget* self, int t);
void QAccessibleWidget_OnRole(const QAccessibleWidget* self, intptr_t slot);
int QAccessibleWidget_SuperRole(const QAccessibleWidget* self);
void QAccessibleWidget_OnState(const QAccessibleWidget* self, intptr_t slot);
QAccessible__State* QAccessibleWidget_SuperState(const QAccessibleWidget* self);
void QAccessibleWidget_OnForegroundColor(const QAccessibleWidget* self, intptr_t slot);
QColor* QAccessibleWidget_SuperForegroundColor(const QAccessibleWidget* self);
void QAccessibleWidget_OnBackgroundColor(const QAccessibleWidget* self, intptr_t slot);
QColor* QAccessibleWidget_SuperBackgroundColor(const QAccessibleWidget* self);
void QAccessibleWidget_OnActionNames(const QAccessibleWidget* self, intptr_t slot);
QStringList QAccessibleWidget_SuperActionNames(const QAccessibleWidget* self);
void QAccessibleWidget_OnDoAction(QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_SuperDoAction(QAccessibleWidget* self, const libqt_string actionName);
void QAccessibleWidget_OnKeyBindingsForAction(const QAccessibleWidget* self, intptr_t slot);
QStringList QAccessibleWidget_SuperKeyBindingsForAction(const QAccessibleWidget* self, const libqt_string actionName);
QObject* QAccessibleWidget_Object(const QAccessibleWidget* self);
void QAccessibleWidget_OnObject(const QAccessibleWidget* self, intptr_t slot);
QObject* QAccessibleWidget_SuperObject(const QAccessibleWidget* self);
void QAccessibleWidget_SetText(QAccessibleWidget* self, int t, const libqt_string text);
void QAccessibleWidget_OnSetText(QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_SuperSetText(QAccessibleWidget* self, int t, const libqt_string text);
QAccessibleInterface* QAccessibleWidget_ChildAt(const QAccessibleWidget* self, int x, int y);
void QAccessibleWidget_OnChildAt(const QAccessibleWidget* self, intptr_t slot);
QAccessibleInterface* QAccessibleWidget_SuperChildAt(const QAccessibleWidget* self, int x, int y);
libqt_string QAccessibleWidget_LocalizedActionName(const QAccessibleWidget* self, const libqt_string name);
void QAccessibleWidget_OnLocalizedActionName(const QAccessibleWidget* self, intptr_t slot);
libqt_string QAccessibleWidget_SuperLocalizedActionName(const QAccessibleWidget* self, const libqt_string name);
libqt_string QAccessibleWidget_LocalizedActionDescription(const QAccessibleWidget* self, const libqt_string name);
QWidget* QAccessibleWidget_Widget(const QAccessibleWidget* self);
QObject* QAccessibleWidget_ParentObject(const QAccessibleWidget* self);
void QAccessibleWidget_AddControllingSignal(QAccessibleWidget* self, const libqt_string signal);