QtBeef/src/Qt/qaccessiblewidget.bf

	
	[LinkName("QAccessibleWidget_SuperIsValid")]
	public static extern bool QAccessibleWidget_SuperIsValid(void* self);
	[LinkName("QAccessibleWidget_Window")]
	public static extern void** QAccessibleWidget_Window(void* self);
	
	public function void QAccessibleWidget_OnWindow_action(void* self);
	[LinkName("QAccessibleWidget_OnWindow")]
	public static extern void** QAccessibleWidget_OnWindow(void* self, QAccessibleWidget_OnWindow_action _action);
	
	[LinkName("QAccessibleWidget_SuperWindow")]
	public static extern void** QAccessibleWidget_SuperWindow(void* self);
	[LinkName("QAccessibleWidget_ChildCount")]
	public static extern c_int QAccessibleWidget_ChildCount(void* self);
	
	public function void QAccessibleWidget_OnChildCount_action(void* self);
	[LinkName("QAccessibleWidget_OnChildCount")]
	public static extern c_int QAccessibleWidget_OnChildCount(void* self, QAccessibleWidget_OnChildCount_action _action);
	
	[LinkName("QAccessibleWidget_SuperChildCount")]
	public static extern c_int QAccessibleWidget_SuperChildCount(void* self);
	[LinkName("QAccessibleWidget_IndexOfChild")]
	public static extern c_int QAccessibleWidget_IndexOfChild(void* self, void** child);
	
	public function void QAccessibleWidget_OnIndexOfChild_action(void* self, void** child);
	[LinkName("QAccessibleWidget_OnIndexOfChild")]
	public static extern c_int QAccessibleWidget_OnIndexOfChild(void* self, QAccessibleWidget_OnIndexOfChild_action _action);
	
	[LinkName("QAccessibleWidget_SuperIndexOfChild")]
	public static extern c_int QAccessibleWidget_SuperIndexOfChild(void* self, void** child);
	[LinkName("QAccessibleWidget_Relations")]
	public static extern void* QAccessibleWidget_Relations(void* self, void* match);
	
	public function void QAccessibleWidget_OnRelations_action(void* self, void* match);
	[LinkName("QAccessibleWidget_OnRelations")]
	public static extern void* QAccessibleWidget_OnRelations(void* self, QAccessibleWidget_OnRelations_action _action);
	
	[LinkName("QAccessibleWidget_SuperRelations")]
	public static extern void* QAccessibleWidget_SuperRelations(void* self, void* match);
	[LinkName("QAccessibleWidget_FocusChild")]
	public static extern void** QAccessibleWidget_FocusChild(void* self);
	
	public function void QAccessibleWidget_OnFocusChild_action(void* self);
	[LinkName("QAccessibleWidget_OnFocusChild")]
	public static extern void** QAccessibleWidget_OnFocusChild(void* self, QAccessibleWidget_OnFocusChild_action _action);
	
	[LinkName("QAccessibleWidget_SuperFocusChild")]
	public static extern void** QAccessibleWidget_SuperFocusChild(void* self);
	[LinkName("QAccessibleWidget_Rect")]
	public static extern void* QAccessibleWidget_Rect(void* self);
	
	public function void QAccessibleWidget_OnRect_action(void* self);
	[LinkName("QAccessibleWidget_OnRect")]
	public static extern void* QAccessibleWidget_OnRect(void* self, QAccessibleWidget_OnRect_action _action);
	
	[LinkName("QAccessibleWidget_SuperRect")]
	public static extern void* QAccessibleWidget_SuperRect(void* self);
	[LinkName("QAccessibleWidget_Parent")]
	public static extern void** QAccessibleWidget_Parent(void* self);
	
	public function void QAccessibleWidget_OnParent_action(void* self);
	[LinkName("QAccessibleWidget_OnParent")]
	public static extern void** QAccessibleWidget_OnParent(void* self, QAccessibleWidget_OnParent_action _action);
	
	[LinkName("QAccessibleWidget_SuperParent")]
	public static extern void** QAccessibleWidget_SuperParent(void* self);
	[LinkName("QAccessibleWidget_Child")]
	public static extern void** QAccessibleWidget_Child(void* self, c_int index);
	
	public function void QAccessibleWidget_OnChild_action(void* self, c_int index);
	[LinkName("QAccessibleWidget_OnChild")]
	public static extern void** QAccessibleWidget_OnChild(void* self, QAccessibleWidget_OnChild_action _action);
	
	[LinkName("QAccessibleWidget_SuperChild")]
	public static extern void** QAccessibleWidget_SuperChild(void* self, c_int index);
	[LinkName("QAccessibleWidget_Text")]
	public static extern libqt_string QAccessibleWidget_Text(void* self, QAccessible_Text t);
	
	public function void QAccessibleWidget_OnText_action(void* self, QAccessible_Text t);
	[LinkName("QAccessibleWidget_OnText")]
	public static extern libqt_string QAccessibleWidget_OnText(void* self, QAccessibleWidget_OnText_action _action);
	
	[LinkName("QAccessibleWidget_SuperText")]
	public static extern libqt_string QAccessibleWidget_SuperText(void* self, QAccessible_Text t);
	[LinkName("QAccessibleWidget_Role")]
	public static extern QAccessible_Role QAccessibleWidget_Role(void* self);
	
	public function void QAccessibleWidget_OnRole_action(void* self);
	[LinkName("QAccessibleWidget_OnRole")]
	public static extern QAccessible_Role QAccessibleWidget_OnRole(void* self, QAccessibleWidget_OnRole_action _action);
	
	[LinkName("QAccessibleWidget_SuperRole")]
	public static extern QAccessible_Role QAccessibleWidget_SuperRole(void* self);
	[LinkName("QAccessibleWidget_State")]
	public static extern void* QAccessibleWidget_State(void* self);
	
	public function void QAccessibleWidget_OnState_action(void* self);
	[LinkName("QAccessibleWidget_OnState")]
	public static extern void* QAccessibleWidget_OnState(void* self, QAccessibleWidget_OnState_action _action);
	
	[LinkName("QAccessibleWidget_SuperState")]
	public static extern void* QAccessibleWidget_SuperState(void* self);
	[LinkName("QAccessibleWidget_ForegroundColor")]
	public static extern void* QAccessibleWidget_ForegroundColor(void* self);
	
	public function void QAccessibleWidget_OnForegroundColor_action(void* self);
	[LinkName("QAccessibleWidget_OnForegroundColor")]
	public static extern void* QAccessibleWidget_OnForegroundColor(void* self, QAccessibleWidget_OnForegroundColor_action _action);
	
	[LinkName("QAccessibleWidget_SuperForegroundColor")]
	public static extern void* QAccessibleWidget_SuperForegroundColor(void* self);
	[LinkName("QAccessibleWidget_BackgroundColor")]
	public static extern void* QAccessibleWidget_BackgroundColor(void* self);
	
	public function void QAccessibleWidget_OnBackgroundColor_action(void* self);
	[LinkName("QAccessibleWidget_OnBackgroundColor")]
	public static extern void* QAccessibleWidget_OnBackgroundColor(void* self, QAccessibleWidget_OnBackgroundColor_action _action);
	
	[LinkName("QAccessibleWidget_SuperBackgroundColor")]
	public static extern void* QAccessibleWidget_SuperBackgroundColor(void* self);
	[LinkName("QAccessibleWidget_Interface_Cast")]
	public static extern void* QAccessibleWidget_Interface_Cast(void* self, QAccessible_InterfaceType t);
	
	public function void QAccessibleWidget_OnInterface_Cast_action(void* self, QAccessible_InterfaceType t);
	[LinkName("QAccessibleWidget_OnInterface_Cast")]
	public static extern void* QAccessibleWidget_OnInterface_Cast(void* self, QAccessibleWidget_OnInterface_Cast_action _action);
	
	[LinkName("QAccessibleWidget_SuperInterface_Cast")]
	public static extern void* QAccessibleWidget_SuperInterface_Cast(void* self, QAccessible_InterfaceType t);
	[LinkName("QAccessibleWidget_ActionNames")]
	public static extern void* QAccessibleWidget_ActionNames(void* self);
	
	public function void QAccessibleWidget_OnActionNames_action(void* self);
	[LinkName("QAccessibleWidget_OnActionNames")]
	public static extern void* QAccessibleWidget_OnActionNames(void* self, QAccessibleWidget_OnActionNames_action _action);
	
	[LinkName("QAccessibleWidget_SuperActionNames")]
	public static extern void* QAccessibleWidget_SuperActionNames(void* self);
	[LinkName("QAccessibleWidget_DoAction")]
	public static extern void QAccessibleWidget_DoAction(void* self, libqt_string actionName);
	
	public function void QAccessibleWidget_OnDoAction_action(void* self, libqt_string actionName);
	[LinkName("QAccessibleWidget_OnDoAction")]
	public static extern void QAccessibleWidget_OnDoAction(void* self, QAccessibleWidget_OnDoAction_action _action);
	
	[LinkName("QAccessibleWidget_SuperDoAction")]
	public static extern void QAccessibleWidget_SuperDoAction(void* self, libqt_string actionName);
	[LinkName("QAccessibleWidget_KeyBindingsForAction")]
	public static extern void* QAccessibleWidget_KeyBindingsForAction(void* self, libqt_string actionName);
	
	public function void QAccessibleWidget_OnKeyBindingsForAction_action(void* self, libqt_string actionName);
	[LinkName("QAccessibleWidget_OnKeyBindingsForAction")]
	public static extern void* QAccessibleWidget_OnKeyBindingsForAction(void* self, QAccessibleWidget_OnKeyBindingsForAction_action _action);
	
	[LinkName("QAccessibleWidget_SuperKeyBindingsForAction")]
	public static extern void* QAccessibleWidget_SuperKeyBindingsForAction(void* self, libqt_string actionName);
	[LinkName("QAccessibleWidget_Widget")]
	public static extern void** QAccessibleWidget_Widget(void* self);
	[LinkName("QAccessibleWidget_ParentObject")]
	public static extern void** QAccessibleWidget_ParentObject(void* self);
	[LinkName("QAccessibleWidget_AddControllingSignal")]
	public static extern void QAccessibleWidget_AddControllingSignal(void* self, libqt_string signal);
	[LinkName("QAccessibleWidget_Object")]
	public static extern void** QAccessibleWidget_Object(void* self);
	
	public function void QAccessibleWidget_OnObject_action(void* self);
	[LinkName("QAccessibleWidget_OnObject")]
	public static extern void** QAccessibleWidget_OnObject(void* self, QAccessibleWidget_OnObject_action _action);
	
	[LinkName("QAccessibleWidget_SuperObject")]
	public static extern void** QAccessibleWidget_SuperObject(void* self);
	[LinkName("QAccessibleWidget_ChildAt")]
	public static extern void** QAccessibleWidget_ChildAt(void* self, c_int x, c_int y);
	
	public function void QAccessibleWidget_OnChildAt_action(void* self, c_int x, c_int y);
	[LinkName("QAccessibleWidget_OnChildAt")]
	public static extern void** QAccessibleWidget_OnChildAt(void* self, QAccessibleWidget_OnChildAt_action _action);
	
	[LinkName("QAccessibleWidget_SuperChildAt")]
	public static extern void** QAccessibleWidget_SuperChildAt(void* self, c_int x, c_int y);
	[LinkName("QAccessibleWidget_SetText")]
	public static extern void QAccessibleWidget_SetText(void* self, QAccessible_Text t, libqt_string text);
	
	public function void QAccessibleWidget_OnSetText_action(void* self, QAccessible_Text t, libqt_string text);
	[LinkName("QAccessibleWidget_OnSetText")]
	public static extern void QAccessibleWidget_OnSetText(void* self, QAccessibleWidget_OnSetText_action _action);
	
	[LinkName("QAccessibleWidget_SuperSetText")]
	public static extern void QAccessibleWidget_SuperSetText(void* self, QAccessible_Text t, libqt_string text);
	[LinkName("QAccessibleWidget_Virtual_Hook")]
	public static extern void QAccessibleWidget_Virtual_Hook(void* self, c_int id, void* data);
	
	public function void QAccessibleWidget_OnVirtual_Hook_action(void* self, c_int id, void* data);
	[LinkName("QAccessibleWidget_OnVirtual_Hook")]
	public static extern void QAccessibleWidget_OnVirtual_Hook(void* self, QAccessibleWidget_OnVirtual_Hook_action _action);
	
	[LinkName("QAccessibleWidget_SuperVirtual_Hook")]
	public static extern void QAccessibleWidget_SuperVirtual_Hook(void* self, c_int id, void* data);
	[LinkName("QAccessibleWidget_LocalizedActionName")]
	public static extern libqt_string QAccessibleWidget_LocalizedActionName(void* self, libqt_string name);
	
	public function void QAccessibleWidget_OnLocalizedActionName_action(void* self, libqt_string name);
	[LinkName("QAccessibleWidget_OnLocalizedActionName")]
	public static extern libqt_string QAccessibleWidget_OnLocalizedActionName(void* self, QAccessibleWidget_OnLocalizedActionName_action _action);
	
	[LinkName("QAccessibleWidget_SuperLocalizedActionName")]
	public static extern libqt_string QAccessibleWidget_SuperLocalizedActionName(void* self, libqt_string name);
	[LinkName("QAccessibleWidget_LocalizedActionDescription")]
	public static extern libqt_string QAccessibleWidget_LocalizedActionDescription(void* self, libqt_string name);
